--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>epam_mentoring_program</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -18,7 +19,13 @@
                 </configuration>
             </plugin>
         </plugins>
+
     </build>
-
-
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>LATEST</version>
+        </dependency>
+    </dependencies>
 </project>
